# lib/db/src/schema/posts.ts
@@ -1,0 +1,15 @@
+import { pgTable, text, timestamp } from "drizzle-orm/pg-core";
+import { usersTable } from "./users";
+
+export const postsTable = pgTable("posts", {
+  id: text("id").primaryKey(),
+  userId: text("user_id")
+    .notNull()
+    .references(() => usersTable.id),
+  text: text("text").notNull(),
+  createdAt: timestamp("created_at", { withTimezone: true })
+    .notNull()
+    .defaultNow(),
+});
+
+export type Post = typeof postsTable.$inferSelect;
